[package]
name = "libbeaglebone"
description = "A friendly Rust interface to the BeagleBone family of devices."
categories = ["embedded", "hardware-support"]
authors = ["ee"]

version = "0.4.0"
license = "GPL-3.0"

homepage = "https://github.com/ekmecic/libbeaglebone"
repository = "https://github.com/ekmecic/libbeaglebone"
documentation = "https://docs.rs/libbeaglebone"

[dependencies]
error-chain = "0.10.0"
nix = "0.8.1"

[badges]
travis-ci = {repository = "ekmecic/libbeaglebone"}
