[package]
name = "libbeaglebone"
description = "A friendly Rust interface to the BeagleBone family of devices."
categories = ["embedded", "hardware-support"]
authors = ["ee"]

version = "0.5.0"
license = "GPL-3.0"

homepage = "https://github.com/ekmecic/libbeaglebone"
repository = "https://github.com/ekmecic/libbeaglebone"
documentation = "https://docs.rs/libbeaglebone"

[dependencies]
bitflags = "0.9.1"
error-chain = "0.10.0"
serialport = "1.0.1"
nix = "0.8.1"

[badges]
travis-ci = {repository = "ekmecic/libbeaglebone"}
